# multi-mandlebrot

./: .gitattributes  .gitignore  README.md  valrange.ods  x16-mandlebrot.bas
6502/: fixedpt.asm  fixedpt24.asm  mandelbrot.asm  mandelbrot24.asm
68000/: mandelbrot.asm  mandelpt.asm
6x09/: fixedpt.asm  fixedpt.asm~  fixedpt24.asm  mandelbrot.asm  mandelbrot.asm~  mandelbrot24.asm
Z80/: fixedpt.asm  mandelbrot.asm
Z80n/: fixedpt.asm  fixedpt1.asm  fixedpt2.asm  fixedpt24.asm  mandelbrot24.asm  mandelbrot_s.asm  test.asm  test.nex
acorn/: $.BOOT  $.BOOT.INF  bbc-mandelbrot-m2-plot.bas  bbc-mandelbrot-m2-print.bas  bbc-mandelbrot_M1.bas  bbc-mandelbrot_M7.bas  bbc-mandelbrot_m2.6502  bbc-mandelbrot_m2.asm  build.sh  fixedpt.6502  launch.bas  mandelbrot.6502
agon/: M1BITMAP.BAS  M1PLOT.BAS  M1PRINT.BAS  M2BITMAP.BAS  M2PLOT.BAS  M2PRINT.BAS  agon-ez80-mandelbrot.asm  agon-z80-mandelbrot.asm  build.sh  ez80-fixedpt_optimized.asm  ez80-fixedpt_slow.asm  ez80-mandelbrot.asm  mez80.asm  mz80.asm  test.asm  z80-fixedpt.asm  z80-mandelbrot.asm
amiga/: ABasiC_Mandelbrot.adf  mandelbrot.adf
apple/: asb-mandelbrot.bas
atari/: a800-mandelbrot.sna  st-mandelbrot.st
c64/: build.sh  c64-mandelbrot.asm  c64-mandelbrot_chrout.asm  c64-mandlebrot.bas
coco/: Makefile  README.md  coco-mandel.asm  coco12-mandel.asm  coco12-mandel.bas  coco12-mandel24.asm  coco3-mandel.asm  (+12 more)
esp32/mand/lcd/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
esp32/mand/lcd/main/LCD_Driver/: ST7789.c  ST7789.h
esp32/mand/lcd/main/LVGL_Driver/: LVGL_Driver.c  LVGL_Driver.h
(+201 files in other folders)
